PR fixes: make title more visible

--- a/src/components/ClockHeader/index.css
+++ b/src/components/ClockHeader/index.css
@@ -2,7 +2,8 @@
 
 .title {
   font-family: 'Raleway Dots', cursive;
-  font-size: 40px;
-  color: #CFD8DC;
+  font-size: 65px;
+  color: #546E7A;
+  font-weight: 300;
 
 }
